# granex-ucode

./: Cargo.toml  readme.md
src/: generator.rs  main.rs
