[package]
edition = "2018"
name = "granex-ucode"
version = "0.0.2"
description = "Tor v3 Vanity Address Generator uCode Edition"
license = "MIT/Apache-2.0"
authors = ["Vitaly Domnikov <oss@vitaly.codes>","Lukas Friedrich <lukas.b.friedrich@gmail.com>"]
readme = "readme.md"
documentation = "https://git.ucode.space/Lukas/granex-ucode"
homepage = "https://git.ucode.space/Lukas/granex-ucode"
repository = "https://git.ucode.space/Lukas/granex-ucode"
keywords = ["onion", "tor"]

[dependencies]
clap = "2.32.0"
rand = "0.5.5"
rust-crypto = "0.2.36"


